envoy-gateway/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9090

static_resources:
  listeners:
    - name: main
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: envoy_proxy_cluster
                http_filters:
                  - name: envoy.filters.http.router

  clusters:
    - name: envoy_proxy_cluster
      type: STRICT_DNS # static
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: envoy_proxy_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: envoy-proxy
                      port_value: 8000
